--- a/postman/target.html
+++ b/postman/target.html
@@ -8,7 +8,7 @@
       }
     }
 
-    window.addEventListner("message", msgReceiver, false); 
+    window.addEventListener("message", msgReceiver, false); 
   </script>
 
 Target. 
